GL/Projet_GL/src/test/deca/context/invalid/sansObjet/decl/double_decl_diff_types.deca
// Test : context_invalid_double_declaration_different_types
// But : redéclarer une variable avec un type différent.
// Couvre : unicité des identifiants dans un même scope.
// Résultat attendu : erreur contextuelle.
// Erreur affichée: Variable already declared: a

{
    int a = 1;
    float a = 2.0;
}

